--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "apexcharts": "^3.37.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^2.1.3",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.9",
+    "styled-reset": "^4.4.5",
+    "typescript": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +52,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://chaevid.github.io/react-masterclass"
+  "homepage": "https://chaevid.github.io/react-masterclass",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
+  }
 }
