--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
     "apexcharts": "^3.29.0",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
+    "gh-pages": "^5.0.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.17.5",
     "react-query": "^3.27.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "recoil": "^0.4.1",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4",
-    "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "typescript": "^5.0.4",
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
