--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4",
     "typescript": "^5.0.4",
