--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
   },
-  "homepage": "https://chaevid.github.io/react-masterclass"
+  "homepage": "https://chaevid.github.io/react-masterclass-todo"
 }
