--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-masterclass-todo",
+  "name": "react-masterclass",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -59,5 +59,5 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
   },
-  "homepage": "https://chaevid.github.io/react-masterclass-todo"
+  "homepage": "https://chaevid.github.io/react-masterclass"
 }
